# datasmith-agentic-multimodal-assistant

./: .gitignore  README.md
client/: .cta.json  package-lock.json  package.json  vite.config.ts
client/src/: routeTree.gen.ts  styles.css
client/src/components/: MardownReact.tsx
client/src/components/site/: Footer.tsx  Logo.tsx  Navbar.tsx  ThemeToggle.tsx
client/src/components/ui/: Reveal.tsx
client/src/lib/: error-capture.ts  theme.tsx
client/src/routes/: __root.tsx  about.tsx  chat.tsx  index.tsx  login.tsx  register.tsx
client/src/store/: useChatStore.ts  useThemesStore.ts  useUserStore.ts
server/: pyproject.toml  requirements.txt
server/app/: main.py
server/app/agent/: execution_manager.py  graph.py  intent_detector.py  planner.py  planner_router.py  state.py  tool_router.py
server/app/database/: collections.py  mongodb.py
server/app/dependencies/: auth_dependency.py
server/app/models/: conversation.py  message.py  user.py
server/app/nodes/: code_explainer_node.py  final_answer_node.py  planner_node.py  qa_node.py  retriever_node.py  sentiment_node.py  summarizer_node.py  web_search_node.py
server/app/prompts/: code_explanation_prompt.py  intent_detector_prompt.py  message_summarization_prompt.py  planner_prompt.py  question_answering_prompt.py  retriver_prompt.py  sentiment_prompt.py  summarization_prompt.py
server/app/rag/: chunker.py  embeddings.py  key_word_extraction.py  retriever.py  vector_store.py
server/app/repositories/: conversation_repository.py  message_repository.py  user_repository.py
server/app/routes/: auth.py  chat.py  conversation.py
server/app/schemas/: auth_schema.py  conversation_schema.py
server/app/services/: audio_service.py  auth_service.py  chat_history_service.py  file_processor.py  image_service.py  jwt_service.py  llm_service.py  pdf_service.py  web_search_service.py
server/app/tools/: code_explainer.py  question_answering_tool.py  retriver_prompt_generator.py  sentiment_tool.py  summarizer.py  web_search_tool.py
server/notebook/: test.ipynb
