[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "fastembed>=0.1.1",
    "faster-whisper>=1.2.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain[google-genai]>=1.3.4",
    "langgraph>=1.2.4",
    "onnxruntime<1.24",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]
